[project]
name = "ffmienbot"
version = "0.1.0"
description = ""
authors = [{ name = "sqkrv" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "python-telegram-bot~=21.4",
    "SQLAlchemy>=2.0.32,<3",
    "psycopg2>=2.9.9,<3",
    "asyncpg>=0.29.0,<0.30",
    "python-dotenv>=1.0.1,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
